Fixed issue with miss aligned buttons

--- a/style.css
+++ b/style.css
@@ -46,8 +46,10 @@ main {
     padding: 3.3rem;
 }
 
-.text-container {
+.text-button-container {
     width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .card-heading {
@@ -57,16 +59,20 @@ main {
 
 .card-description {
     color: hsla(0, 0%, 100%, 0.75);
+    display: inline-block;
+    margin: 0;
+    height: 5rem;
 }
 
 .button {
-    padding: .8rem 1.7rem;
+    padding: .65rem 1.7rem;
     border-radius: 2rem;
     font-size: 1rem;
     background-color: hsl(0, 0%, 95%); 
     border: 2px solid transparent;
+    width: 9rem;
 
-    margin-top: 4rem;
+    margin-top: 6rem;
 }
 
 .button:hover {
